# Data-Profiling

./: Cargo.toml  README.md  report.json  report.md  sample.csv
src/: main.rs  mod.rs  reader.rs  report.rs  stats.rs
